# Image-Recognition-NCNN

./: CMakeLists.txt  Image-Recognition-NCNN.sln  Image-Recognition-NCNN.vcxproj  Image-Recognition-NCNN.vcxproj.filters  README.md  detect.cpp  detect.h  main.cpp
model/cone_ncnn_model_v8_320_opt/: metadata.yaml  model.ncnn.param
model/cone_ncnn_model_v9_128/: metadata.yaml  model.ncnn.param
model/cone_ncnn_model_v9_320/: model.ncnn.param
model/cone_ncnn_model_v9_320_opt/: metadata.yaml  model.ncnn.param
src/: detect.cpp  detect.h  main.cpp
